# xamarin-gtk-theme

./: .gitignore  AUTHORS  COPYING  CREDITS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  murrine.doap  xamarin-gtk-theme.pc.in
po/: ChangeLog  LINGUAS  POTFILES.in  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  es.po  et.po  fr.po  gl.po  nb.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sv.po  zh_CN.po
rc/: gtkrc
schema/: Makefile.am  murrine.xml.in.in  xamarin.xml.in.in
src/: animation.c  animation.h  cairo-support.c  cairo-support.h  config.h.in  exponential-blur.c  exponential-blur.h  gaussian-blur.c  gaussian-blur.h  murrine_draw.c  murrine_draw.h  murrine_draw_rgba.c  murrine_draw_rgba.h  murrine_rc_style.c  murrine_rc_style.h  murrine_style.c  murrine_style.h  murrine_theme_main.c  murrine_types.h  raico-blur.c  raico-blur.h  stack-blur.c  stack-blur.h  support.c  support.h
